# Conduit5

./: Cargo.toml  README.md  config.toml
src/: config.rs  lib.rs  main.rs  socks5.rs  whitelist.rs
tests/: whitelist.rs
